# autogluon-assistant

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  lint.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/test-assistant/: action.yml
.github/workflow_scripts/: env_setup.sh  test_assistant.sh  test_install.sh  test_ui.sh  test_ui_coverage.sh
.github/workflows/: continuous_integration.yml  lint.yml  nightly_release.yml  platform_tests-command.yml  pypi_release.yml  slash_command_dispatch.yml  test_release.yml  test_ui.yml  ui-test.yml
.github/workflows_env/: unittest_env.yml
config/: config.yaml
configs/: best_quality.yaml  medium_quality.yaml
docs/tutorials/: autogluon-assistant-quick-start.ipynb
docs/whats_new/: v0.1.0.md
release_instructions/: ReleaseInstructions.md
src/autogluon/assistant/: __init__.py  assistant.py  constants.py  predictor.py  task.py
src/autogluon/assistant/configs/: best_quality.yaml  default.yaml  high_quality.yaml  medium_quality.yaml
src/autogluon/assistant/llm/: llm.py
src/autogluon/assistant/prompting/: __init__.py  prompt_generator.py  utils.py
src/autogluon/assistant/task_inference/: task_inference.py
src/autogluon/assistant/transformer/: __init__.py  base.py
src/autogluon/assistant/transformer/feature_transformers/: __init__.py  base.py  caafe.py  openfe.py  scentenceFT.py
src/autogluon/assistant/ui/: app.py  constants.py  file_uploader.py  log_processor.py  style.css
src/autogluon/assistant/ui/.streamlit/: config.toml
src/autogluon/assistant/ui/pages/: demo.py  feature.py  nav_bar.py  task.py  tutorial.py
src/autogluon/assistant/ui/tests/: test_task_func.py  test_task_widget.py
src/autogluon/assistant/ui/utils/: utils.py
src/autogluon/assistant/utils/: __init__.py  configs.py  files.py
src/autogluon_assistant/: __init__.py  assistant.py  constants.py  predictor.py  task.py
src/autogluon_assistant/configs/: best_quality.yaml  high_quality.yaml  medium_quality.yaml
src/autogluon_assistant/llm/: __init__.py  llm.py  prompts.py
src/autogluon_assistant/prompting/: __init__.py  prompt_generator.py
src/autogluon_assistant/task_inference/: __init__.py  task_inference.py
src/autogluon_assistant/transformer/: __init__.py  base.py  task_inference.py
src/autogluon_assistant/transformer/feature_transformers/: __init__.py  base.py  caafe.py  openfe.py  scentenceFT.py
src/autogluon_assistant/ui/: app.py  constants.py  file_uploader.py  log_processor.py  style.css
src/autogluon_assistant/ui/pages/: nav_bar.py  preview.py  task.py  tutorial.py
src/autogluon_assistant/ui/utils/: __init__.py  utils.py
src/autogluon_assistant/utils/: __init__.py  configs.py  files.py
tests/unittests/integration/: test_integration.py
tests/unittests/task/: test_data_loading.py  test_task_inference.py
tests/unittests/transformer/feature_transformers/: test_openfe.py
tests/unittests/ui/: test_file_uploader.py  test_task_func.py  test_task_widget.py
tests/unittests/ui/tests/: test_task_func.py  test_task_widget.py
tools/: configure_llms.sh
toy_data/: competition_files.txt  data.txt  descriptions.txt  evaluation.txt  test.csv  train.csv
