[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon-assistant"
version = "0.0.2"
description = "An LLM-backed AI agent for competitive tabular machine learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "autogluon.tabular[all]>=1.1",
    "hydra-core>=1.3",
    "importlib-resources",
    "langchain~=0.1.15",
    "openfe",
    "pydantic==1.10.13",
    "caafe@git+https://github.com/gidler/CAAFE.git@main",
    "typer",
    "rich",
    "s3fs",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "GitRepo>=1",
    "pytest>=7",
    "isort",
    "ruff==0.4",
]

[project.urls]
"Homepage" = "https://github.com/autogluon/autogluon-assistant"

[project.scripts]
autogluon-assistant = "autogluon_assistant:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autogluon_assistant_tools.config" = ["**/*.yaml"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--strict-markers"
xfail_strict = true

[tool.black]
line-length = 119
target-version = ['py38', 'py39', 'py310']

[tool.isort]
known_first_party = "autogluon_assistant"
known_third_party = [
    "autogluon",
    "caafe",
    "joblib",
    "langchain",
    "numpy",
    "omegaconf",
    "openai",
    "pandas",
    "psutil",
    "pydantic",
    "pytest",
    "requests",
    "scipy",
    "sklearn",
    "tqdm",
]
line_length = 119
profile = "black"


[tool.codespell]
skip = '.git,*.pdf,*.svg,*.ipynb,*.csv,'

[tool.ruff]
lint.ignore = [
    "E501",  # Line too long
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "E722",  # Do not use bare `except`
]
extend-exclude = ["__init__.py"]

[tool.mypy]
ignore_missing_imports = true