[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autogluon-assistant"
version = "0.0.2"
description = "An LLM-backed AI agent for competitive tabular machine learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "autogluon.tabular[all]>=1.1,<2.0",
    "importlib-resources>=6.4.5,<7.0",
    "langchain>=0.3.3,<0.4",
    "langchain_openai>=0.2.2,<0.3",
    "langchain_aws>=0.2.2,<0.3",
    "openfe>=0.0.12,<0.1",
    "pydantic>=2.9.2,<3.0",
    "caafe@git+https://github.com/gidler/CAAFE.git@main",
    "hydra-core>=1.3",
    "matplotlib>=3.9.2",
    "typer>=0.12.5",
    "rich>=13.8.1",
    "s3fs>=2024.9.0",
    "joblib>=1.4.2",
    "python-calamine",
    "sentence-transformers>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24",
    "GitRepo>=1",
    "pytest>=7",
    "isort",
    "ruff==0.4",
]

[project.urls]
"Homepage" = "https://github.com/autogluon/autogluon-assistant"

[project.scripts]
autogluon-assistant = "autogluon_assistant:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"autogluon_assistant_tools.config" = ["**/*.yaml"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--strict-markers"
xfail_strict = true

[tool.black]
line-length = 119
target-version = ['py38', 'py39', 'py310']

[tool.isort]
known_first_party = "autogluon_assistant"
known_third_party = [
    "autogluon",
    "caafe",
    "joblib",
    "langchain",
    "numpy",
    "omegaconf",
    "openai",
    "pandas",
    "psutil",
    "pydantic",
    "pytest",
    "requests",
    "scipy",
    "sklearn",
    "tqdm",
]
line_length = 119
profile = "black"


[tool.codespell]
skip = '.git,*.pdf,*.svg,*.ipynb,*.csv,'

[tool.ruff]
lint.ignore = [
    "E501",  # Line too long
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "E722",  # Do not use bare `except`
]
extend-exclude = ["__init__.py"]

[tool.mypy]
ignore_missing_imports = true